mdapipkg/unpackaged/objects/Case.object
<CustomObject>
    <fields>
        <fullName>EngineeringReqNumber__c</fullName>
        <label>Engineering Req Number</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loan_Amount__c</fullName>
        <label>Loan Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Mortgage_asset_value__c</fullName>
        <label>Mortgage asset value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PotentialLiability__c</fullName>
        <label>Potential Liability</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>GC1040</fullName>
                </value>
                <value>
                    <fullName>GC1060</fullName>
                </value>
                <value>
                    <fullName>GC3020</fullName>
                </value>
                <value>
                    <fullName>GC3040</fullName>
                </value>
                <value>
                    <fullName>GC3060</fullName>
                </value>
                <value>
                    <fullName>GC5020</fullName>
                </value>
                <value>
                    <fullName>GC5040</fullName>
                </value>
                <value>
                    <fullName>GC5060</fullName>
                </value>
                <value>
                    <fullName>GC1020</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SLAViolation__c</fullName>
        <label>SLA Violation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SSN__c</fullName>
        <label>SSN</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status1__c</fullName>
        <formula>(IF( Loan_Amount__c &lt;  Mortgage_asset_value__c ,&quot;Qualified&quot;,&quot;Unqualified&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status1</label>
        <type>Text</type>
    </fields>
    <validationRules>
        <fullName>Loan_Amount_should_be_less_than_Mortg</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK(Loan_Amount__c)</errorConditionFormula>
        <errorDisplayField>Loan_Amount__c</errorDisplayField>
        <errorMessage>Loan AMount should not be blank</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SSN_Number_should_be_equal_to_9_digits</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(
OR(
ISBLANK(SSN__c),
REGEX( SSN__c , &quot;[0-9]{3}-[0-9]{2}-[0-9]{4}&quot;)
)
)</errorConditionFormula>
        <errorDisplayField>SSN__c</errorDisplayField>
        <errorMessage>SSN Number is in invalid format</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>loan_amount_should_be_greater_than_zero</fullName>
        <active>true</active>
        <errorConditionFormula>(Loan_Amount__c)&gt;5000</errorConditionFormula>
        <errorDisplayField>Loan_Amount__c</errorDisplayField>
        <errorMessage>Loan amount should not be less than 0</errorMessage>
    </validationRules>
</CustomObject>